@@ -18,7 +18,7 @@ segment(x, ...)
   "tags", "other"), delimiter = ifelse(what == "tokens", " ", ifelse(what ==
   "sentences", "[.!?:;]", ifelse(what == "paragraphs", "\\\\n{2}", ifelse(what
   == "tags", "##\\\\w+\\\\b", NULL)))), valuetype = c("regex", "fixed",
-  "glob"), perl = FALSE, ...)
+  "glob"), perl = FALSE, keepdocvars = TRUE, ...)
 }
 \arguments{
 \item{x}{text or corpus object to be segmented}
@@ -42,6 +42,11 @@ matching; \code{"regex"} for regular expressions; or \code{"glob"} for
 "glob"-style wildcard patterns}
 
 \item{perl}{logical. Should Perl-compatible regular expressions be used?}
+
+\item{keepdocvars}{if \code{TRUE}, repeat the docvar values for each
+segmented text; if \code{FALSE}, drop the docvars in the segmented corpus. 
+Dropping the docvars might be useful in order to conserve space or if these 
+are not desired for the segmented corpus.}
 }
 \value{
 A list of segmented texts, with each element of the list correponding
@@ -66,8 +71,8 @@ Tokens are delimited by Separators.  For sentences, the delimiter
   character.)
 }
 \note{
-Does not currently record document segments if segmenting a multi-text corpus
-into smaller units. For this, use \link{changeunits} instead.
+Does not currently record document segments if segmenting a multi-text
+  corpus into smaller units. For this, use \link{changeunits} instead.
 }
 \examples{
 # same as tokenize()
@@ -79,11 +84,14 @@ segment(ukimmigTexts[3:4], "paragraphs")
 # segment a text into sentences
 segmentedChar <- segment(ukimmigTexts, "sentences")
 segmentedChar[2]
-testCorpus <- corpus("##INTRO This is the introduction. 
-                      ##DOC1 This is the first document.  
-                      Second sentence in Doc 1.  
-                      ##DOC3 Third document starts here.  
-                      End of third document.")
+testCorpus <- corpus(c("##INTRO This is the introduction. 
+                       ##DOC1 This is the first document.  
+                       Second sentence in Doc 1.  
+                       ##DOC3 Third document starts here.  
+                       End of third document.",
+                      "##INTRO Document ##NUMBER Two starts before ##NUMBER Three."))
+# add a docvar
+testCorpus[["serialno"]] <- paste0("textSerial", 1:ndoc(testCorpus))
 testCorpusSeg <- segment(testCorpus, "tags")
 summary(testCorpusSeg)
 texts(testCorpusSeg)
